--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <address>
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        наб. Принсенграхт 263-<br>265, Амстердам</br>
+        наб. Принсенграхт 263-<br />265, Амстердам
       </address>
     </header>
     <main>
@@ -34,7 +34,7 @@
             <span class="aligned-text aligned-text_left">Оно</span> 
             <span class="aligned-text aligned-text_center">тебе</span> 
             <span class="aligned-text aligned-text_right">надо</span>
-          </div>
+          </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <a class="bet-button" href="">Сделать ставку</a>
@@ -44,7 +44,7 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
              <article class="card card_type_film">
                <div class="overlay"></div>
               <h3 class="card__title">Фильм режиссёра, 
@@ -60,7 +60,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                <h3 class="card__title">Книга, где описан 
@@ -86,7 +86,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                <h3 class="card__title">Картина, 
@@ -116,7 +116,7 @@
                 <img src="images/logo-white.svg" alt="Оно тебе надо">
               </a>
             </div>
-          <h4 class="about__title">Об aукционе</h4>
+          <h2 class="about__title">Об aукционе</h2>
            <div class="about__paragraph">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно 
@@ -131,7 +131,7 @@
               на критику, кажущуюся простоту или сложность, сейчас без этих лотов 
               невозможно представить современную культуру. Когда в эти вещи не 
               верил никто, продолжали верить их создатели. И сейчас эти лоты 
-              стали культовыми. </p>
+              стали культовыми.</p>
             </div>
       </section>
     </main>
@@ -139,7 +139,7 @@
       <address>
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        наб. Принсенграхт 263-265, <br>Амстердам</br>
+        наб. Принсенграхт 263-265, <br />Амстердам
       </address>
       <nav class="footer__menu">
        <ul class="footer__menu-list">
